--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Django
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -13,7 +16,6 @@ __pycache__/
 .env
 **/env/
 
-
 # Static files
 /staticfiles/
 
@@ -23,3 +25,26 @@ __pycache__/
 # Dependency directories
 /.venv/
 /lib/
+
+# React
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
