--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,23 @@ __pycache__/
 .env.test.local
 .env.production.local
 
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# macOS system files
+._*
+.Spotlight-V100
+.Trashes
